--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             //set the session on the login page  
-            if (username === 'Medstar' && password === 'Newpassword123') {
+            if (username === 'Myhealth' && password === 'Newpassword123') {
                 
              //sessionStorage.setItem("AuthenticationState", "Authenticated");
                 //sessionStorage.setItem("AuthenticationExpires", Date.now.addHours(1));
