--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 
              //sessionStorage.setItem("AuthenticationState", "Authenticated");
                 //sessionStorage.setItem("AuthenticationExpires", Date.now.addHours(1));
-               window.location.replace("medstar.html");
+               window.location.replace("myhealth.html");
                 //alert('Login successful!');
 
             } else {
