--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
                window.location.replace("myhealth.html");
                 //alert('Login successful!');
 
+            } else if (username === 'Altaie' && password === 'Claims@123') {
+                window.location.replace("Altaie.html"); 
             } else {
                 alert('Username or password incorrect. Please try again.');
             }
-            //Date.prototype.addHours = function(h) {    
+            //Date.prototype.addHours = function(h) {   33 
             //this.setTime(this.getTime() + (h*60*60*1000)); 
             //return this;   
         //}
