--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 
             } else if (username === 'Altaie' && password === 'Claims@123') {
                 window.location.replace("Altaie.html"); 
-            } else {
+            } else if (username === 'Almazroui' && password === 'AmcCBI@2025') {
+                window.location.replace("Almazroui.html"); 
+            } else if (username === 'Almagd' && password === 'AmcCBI@2025') {
+                window.location.replace("Almagd.html"); 
+            } 
+            
+            else {
                 alert('Username or password incorrect. Please try again.');
             }
             //Date.prototype.addHours = function(h) {   33 
