--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
             } else if (username === 'Almagd' && password === 'AmcCBI@2025') {
                 sessionStorage.setItem("AuthenticationState", "Authenticated");
                 window.location.replace("Almagd.html"); 
+            } else if (username === '4571101' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571101.html"); 
+            } else if (username === '4571202' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571202.html"); 
+            } else if (username === '4571303' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571303.html"); 
+            } else if (username === '4571404' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571404.html"); 
+            } else if (username === '4571505' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571505.html"); 
+            } else if (username === '4571606' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571606.html"); 
+            } else if (username === '4571707' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571707.html"); 
+            } else if (username === '4571808' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571808.html"); 
+            } else if (username === '4571909' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4571909.html"); 
+            } else if (username === '4572010' && password === 'NewCBI@2025') {
+                sessionStorage.setItem("AuthenticationState", "Authenticated");
+                window.location.replace("4572010.html"); 
             } 
             
             else {
